Changed replay to play again

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <button class="playerO">O's turn</button>
       </div>
       <div class="game-end">
-        <button class="playerX">Replay</button>
+        <button class="playerX">Play Again</button>
       </div>
       <div class="game-board">
         <section>
